--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
       left: 0;
       width: 100%;
       height: 100%;
-      padding: 3rem 1rem;
+      padding: 2rem 1rem;
+      box-sizing: border-box;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       color: white;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+      overflow-y: auto;
+      max-height: 100%;
     }
 
     .convite-sobreposto h2 {
@@ -77,7 +80,7 @@
 
     .convite-sobreposto p,
     .versiculo {
-      font-size: 1.3rem;  /* Aumentado para melhor leitura */
+      font-size: 1.3rem;
       margin: 0.5rem 0;
       max-width: 700px;
     }
@@ -131,19 +134,24 @@
 
     @media (max-width: 600px) {
       h1 {
-        font-size: 2rem;
+        font-size: 1.8rem;
+      }
+
+      .convite-sobreposto {
+        padding: 1.5rem 1rem;
       }
 
       .convite-sobreposto h2 {
-        font-size: 2rem;
+        font-size: 1.6rem;
       }
 
+      .convite-sobreposto p,
       .versiculo {
-        font-size: 1.1rem;
+        font-size: 1rem;
       }
 
       .romantic-text {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
       }
 
       .hero-section {
@@ -192,13 +200,13 @@
 
   <div class="links">
     <div class="link-item">
-      <a href="https://maps.google.com/?q=Chácara+Pingo+de+Ouro+São+Marcos+I+Avaré" target="_blank">
+      <a href="https://maps.google.com/?q=Chácara+Pingo+de+Ouro+São+Marcos+I+Avaré" target="_blank" rel="noopener noreferrer">
         <img src="local-festa.jpg" alt="Local da Festa" title="Ver local da festa">
       </a>
       <div class="romantic-text">Local do Evento</div>
     </div>
     <div class="link-item">
-      <a href="formulario.html" target="_blank">
+      <a href="formulario.html" target="_blank" rel="noopener noreferrer">
         <img src="confirmar-presenca.jpg" alt="Confirmação de Presença" title="Confirmar presença">
       </a>
       <div class="romantic-text">Confirme sua Presença</div>
