--- a/formulario.html
+++ b/formulario.html
@@ -184,6 +184,7 @@
     <label>Quantas pessoas além de você? *</label>
     <select name="entry.1531895587" required>
       <option value="">Selecione</option>
+      <option value="0">0</option>
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
@@ -197,6 +198,7 @@
     <label>Quantas são crianças? *</label>
     <select name="entry.1120097726" required>
       <option value="">Selecione</option>
+      <option value="0">0</option>
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
