--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
   <div class="links">
     <div class="link-item">
-      <a href="https://maps.google.com/?q=Chácara+Pingo+de+Ouro+São+Marcos+I+Avaré" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.google.com/maps/place/23%C2%B011'08.9%22S+48%C2%B057'58.5%22W/@-23.1857742,-48.9847141,2417m/data=!3m2!1e3!4b1!4m4!3m3!8m2!3d-23.185795!4d-48.96626?entry=ttu&g_ep=EgoyMDI1MDcwNi4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">
         <img src="local-festa.jpg" alt="Local da Festa" title="Ver local da festa">
       </a>
       <div class="romantic-text">Local do Evento</div>
