--- a/formulario.html
+++ b/formulario.html
@@ -195,7 +195,7 @@
       <option value="8">8</option>
     </select>
 
-    <label>Quantas são crianças? *</label>
+    <label>Quantas são crianças menores de 8 Anos? *</label>
     <select name="entry.1120097726" required>
       <option value="">Selecione</option>
       <option value="0">0</option>
