--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
     <div class="hero-section">
       <img src="foto-casal.jpg" alt="Foto do casal">
       <div class="convite-sobreposto">
-        <p>Com a bênção de Deus e de nossos pais,</p>
+       
         <p><strong>Lucia Helena & José Antonio</strong><br>
            <strong>Izaldite Nascimento & José Mariano</strong></p>
 
         <p>Convidam para celebrar a união de seus filhos</p>
 
-        <h2>Juliana Cristina<br>&<br>Marcelo Mariano</h2>
+        <h2>Juliana<br>&<br>Marcelo</h2>
 
         <div class="versiculo">
           “Assim, já não são dois, mas sim uma só carne.<br>
@@ -187,7 +187,7 @@
         </div>
 
         <p>
-          O grande dia será celebrado com amor, fé e alegria no dia<br>
+          O grande momento será celebrado com amor, fé e alegria no dia<br>
           <strong>23 de agosto de 2025</strong>, às <strong>12 horas</strong><br>
           na <strong>Chácara Pingo de Ouro</strong><br>
           São Marcos I – Avaré/SP
