--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
   <div class="hero-section">
     <div class="imagem-com-texto">
       <div class="texto-sobre-imagem">
-        <p><strong>Lucia Helena & José Antonio</strong><br>
-           <strong>Izaldite Nascimento & José Mariano</strong></p>
+        <p><strong>Lucia & José</strong><br>
+           <strong>Izaldite & Mariano</strong></p>
 
         <p>Convidam para celebrar a união de seus filhos</p>
 
