--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
 <body>
 
   <header>
-    <h1>Juliana Cristina & Marcelo Mariano</h1>
+    <h1>Juliana Cristina</h1>
+    <h1>&</h1>
+    <h1>Marcelo Mariano</h1>
     <p>É com muita alegria que convidamos você para celebrar conosco o dia mais especial de nossas vidas.</p>
   </header>
 
