--- a/index.html
+++ b/index.html
@@ -202,5 +202,10 @@
     document.addEventListener('touchstart', iniciarMusica);
   </script>
 
+  <footer style="text-align: center; padding: 1rem 0; font-family: 'Georgia', serif; font-size: 0.9rem; color: #5a3e36; background-color: #fceae0;">
+    Made by <a href="https://www.instagram.com/mivaassessoriasp" target="_blank" rel="noopener noreferrer" style="color: #8a4b3e; text-decoration: none; font-weight: bold;">@mivaassessoriasp</a>
+  </footer>
+
+  
 </body>
 </html>
