--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <p>
           O grande momento será celebrado com amor, fé e alegria no dia<br>
           <strong>23 de agosto de 2025</strong>, às <strong>12 horas</strong><br>
-          na <strong>Chácara Pingo de Ouro</strong><br>
+          na <strong>Recanto Pingo de Ouro</strong><br>
           São Marcos I – Avaré/SP
         </p>
 
